[package]
name = "aether-rtdb-shm"
publish = false
version.workspace = true
edition = "2024"
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Expose test-only helpers (new_empty, insert on ChannelToSlotIndex) for
# use in downstream crate unit tests. Not for production builds.
test-helpers = []

[dependencies]
aether-dataplane = { path = "../../crates/aether-dataplane" }
aether-domain = { path = "../../crates/aether-domain" }
aether-shm-bridge = { path = "../../extensions/shm-bridge" }
aether-model = { path = "../aether-model" }
aether-routing = { path = "../aether-routing" }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
memmap2 = "0.9.11"
arc-swap = "1.7"
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { workspace = true }
tokio = { workspace = true }
aether-rules = { path = "../aether-rules" }
aether-model = { path = "../aether-model" }

[[bench]]
name = "control_chain"
harness = false

[[bench]]
name = "pointwatch_e2e"
harness = false

[[bench]]
name = "false_sharing"
harness = false

[lints]
workspace = true
